trunk/qclive/qclive-core/src/test/resources/samples/qclive/wigValidator/valid/TCGA-00-0099.wig
#comment
#VALID : two variable steps, no intervening track line
browser position chr19:59304200-59310700
browser hide all
#	150 base wide bar graph at arbitrarily spaced positions,
#	threshold line drawn at y=11.76
#	autoScale off viewing range set to [0:25]
#	priority = 10 positions this as the first graph
#	Note, one-relative coordinate system in use for this format
track type=wiggle_0 name="one track line" description="TCGA-00-0099.wig" visibility=full autoScale=off viewLimits=0.0:25.0 color=50,150,255 yLineMark=11.76 yLineOnOff=on priority=10
#comment
variableStep chrom=chr19
#comment
59304701 1
#comment
59304901 12.5
59305401 15.0
59305601 17.5
59305901 20.0
59306081 17.5
59306301 15.0
59306691 12.5
59307871 -10.0
variableStep chrom=chr19
#comment
59304701 1
#comment
59304901 12.5
59305401 15.0
59305601 17.5
59305901 20.0
59306081 17.5
59306301 15.0
59306691 12.5
59307871 -10.0
